--- a/service-demo.yaml
+++ b/service-demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-user-service
+  name: c-ecommerce-user-service
 spec:
   selector:
     app: user-service
@@ -13,7 +13,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-customer-service
+  name: c-ecommerce-customer-service
 spec:
   selector:
     app: customer-service
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-seller-service
+  name: c-ecommerce-seller-service
 spec:
   selector:
     app: seller-service
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-admin-service
+  name: c-ecommerce-admin-service
 spec:
   selector:
     app: admin-service
@@ -49,7 +49,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-common-service
+  name: c-ecommerce-common-service
 spec:
   selector:
     app: common-service
@@ -57,4 +57,16 @@ spec:
   ports:
     - port: 3500
       targetPort: 3500
+---
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: c-ecommerce-statistics-service
+  spec:
+    selector:
+      app: statistics-service
+    type: ClusterIP
+    ports:
+      - port: 3600
+        targetPort: 3600
 
